--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest": true
     },
     "extends": [
         "plugin:react/recommended",
@@ -24,6 +25,19 @@
     "rules": {
     	"no-use-before-define": "off",
 		"@typescript-eslint/no-use-before-define": ["error"],
-		"react/jsx-filename-extension": [ "warn", {"extensions": [".tsx"]} ]
-    }
+		"react/jsx-filename-extension": [ "warn", {"extensions": [".tsx"]} ],
+		"import/extensions": [
+	      "error",
+	      "ignorePackages",
+	      {
+	        "ts": "never",
+	        "tsx": "never"
+	      }
+	   ]
+    },
+    "settings": {
+		"import/resolver": {
+			"typescript": {}
+		}
+	}
 }
