--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,41 +1,38 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "jest": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb",
-        "plugin:prettier/recommended",
+	"env": {
+		"browser": true,
+		"es2021": true,
+		"jest": true
+	},
+	"extends": [
+		"plugin:react/recommended",
+		"airbnb",
+		"plugin:prettier/recommended",
 		"prettier/prettier"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 13,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "@typescript-eslint"
-    ],
-    "rules": {
-    	"no-use-before-define": "off",
+	],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": 13,
+		"sourceType": "module"
+	},
+	"plugins": ["react", "@typescript-eslint", "html"],
+	"rules": {
+		"no-use-before-define": "off",
 		"@typescript-eslint/no-use-before-define": ["error"],
-		"react/jsx-filename-extension": [ "warn", {"extensions": [".tsx"]} ],
+		"react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
 		"import/extensions": [
-	      "error",
-	      "ignorePackages",
-	      {
-	        "ts": "never",
-	        "tsx": "never"
-	      }
-	   ]
-    },
-    "settings": {
+			"error",
+			"ignorePackages",
+			{
+				"ts": "never",
+				"tsx": "never"
+			}
+		]
+	},
+	"settings": {
 		"import/resolver": {
 			"typescript": {}
 		}
