--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Testing react+ts for cora.",
 	"main": "index.js",
 	"dependencies": {
+		"@stitches/react": "^1.2.5",
 		"@types/react": "^17.0.31",
 		"@types/react-dom": "^17.0.10",
 		"parcel": "^2.0.0",
