--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/testing-library__react": "^10.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.1.0",
 		"@typescript-eslint/parser": "^5.1.0",
+		"antd": "^4.16.13",
 		"eslint": "^7.32.0",
 		"eslint-config-airbnb": "^18.2.1",
 		"eslint-config-prettier": "^8.3.0",
