--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"description": "Testing react+ts for cora.",
 	"main": "index.js",
 	"dependencies": {
+		"@emotion/react": "^11.5.0",
+		"@emotion/styled": "^11.3.0",
+		"@mui/icons-material": "^5.1.0",
+		"@mui/material": "^5.1.0",
 		"@types/react": "^17.0.31",
 		"@types/react-dom": "^17.0.10",
 		"parcel": "^2.0.0",
